amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 4

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: 'Input' is not a valid union member (only Object types)
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(25,0)-(25,62)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: 'Interface' is not a valid union member (only Object types)
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(25,0)-(25,62)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: 'Scalar' is not a valid union member (only Object types)
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(25,0)-(25,62)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-union-members
  Message: 'Union' is not a valid union member (only Object types)
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/union-invalid-members-extension.api.graphql#/declares/union/SearchResult
  Property: http://a.ml/vocabularies/shapes#anyOf
  Range: [(25,0)-(25,62)]
  Location: 
